--- a/preview/quickref.html
+++ b/preview/quickref.html
@@ -84,7 +84,7 @@
                 <div class="section-row" id="basic-conditions"></div>
             </div>
         </div>
-        
+
         <!-- Environmental section -->
         <div id="section-environment" class="section-container">
             <div class="section-title">
@@ -110,6 +110,13 @@
             </div>
         </div>
 
+        <!-- XP Chart section -->
+        <div id="section-xp" class="section-container">
+             <div class="section-title">
+                  Experienced Needed
+             </div>
+             <div class="section-content"
+                <div class="section-row" id="xp-player"></div>
     </div>
 
     <!-- Modal -->
@@ -142,6 +149,7 @@
     <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
