--- a/preview/quickref.html
+++ b/preview/quickref.html
@@ -115,9 +115,10 @@
              <div class="section-title">
                   Experienced Needed
              </div>
-             <div class="section-content"
+             <div class="section-content">
                 <div class="section-row" id="xp-player"></div>
-    </div>
+           </div>
+       </div>
 
     <!-- Modal -->
     <div class="modal" id="modal" tabindex="-1">
