changed xp chart

--- a/quickref.html
+++ b/quickref.html
@@ -113,11 +113,12 @@
         <!-- XP Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
-                  Experienced Needed
+                 Experience Needed
              </div>
-             <div class="section-content"
-                <div class="section-row" id="xp-player"></div>
-    </div>
+             <div class="section-content">
+                 <div class="section-row" id="xp-player"></div>
+            </div>
+        </div>
 
     <!-- Modal -->
     <div class="modal" id="modal" tabindex="-1">
