Added XP-CR chart

--- a/quickref.html
+++ b/quickref.html
@@ -110,13 +110,23 @@
             </div>
         </div>
 
-        <!-- XP Chart section -->
+        <!-- XP Level Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
                  Experience Needed
              </div>
              <div class="section-content">
                  <div class="section-row" id="xp-player"></div>
+            </div>
+        </div>
+
+        <!-- XP-CR Chart section -->
+        <div id="section-xp-cr" class="section-container">
+             <div class="section-title">
+                 Experience Given
+             </div>
+             <div class="section-content">
+                 <div class="section-row" id="xp-cr"></div>
             </div>
         </div>
 
