Added lots of stuff
* Damage types
* Healing, dying, resting
* Stabilize action
* Mounting/Dismounting

--- a/quickref.html
+++ b/quickref.html
@@ -110,6 +110,28 @@
             </div>
         </div>
 
+        <!-- Damage Types Section -->
+        <div id="section-damage-types" class="section-container">
+             <div class="section-title">
+                 Damage Types
+             </div>
+             <div class="section-content">
+                 <div class="section-row" id="damage-types"></div>
+            </div>
+        </div>
+
+        <!-- Health, Dying, and Resting Section -->
+        <div id="section-damage-healing" class="section-container">
+             <div class="section-title">
+                 Health, Dying, and Resting
+             </div>
+             <div class="section-content">
+                 <div class="section-row" id="damage-health"></div>
+                 <div class="section-row" id="damage-death"></div>
+                 <div class="section-row" id="damage-resting"></div>
+            </div>
+        </div>
+
         <!-- XP Level Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
@@ -161,6 +183,7 @@
     <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
