Added free actions

--- a/quickref.html
+++ b/quickref.html
@@ -36,18 +36,24 @@
                 Action <span class="float-right">1/turn</span>
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    You can also interact with one object or feature of the
-                    environment for free.
-                </div>
                 <div class="section-row" id="basic-actions"></div>
             </div>
         </div>
 
-        <!-- Bonus action section -->
+        <!-- Free Action section -->
+        <div id="section-free-action" class="section-container">
+             <div class="section-title">
+                 Free Action (At DM discretion)
+             </div>
+             <div class="section-content">
+                 <div class="section-row" id="basic-free-actions"></div>
+            </div>
+        </div>
+
+        <!-- Bonus Action section -->
         <div id="section-bonus-action" class="section-container">
             <div class="section-title">
-                Bonus action <span class="float-right">max. 1/turn</span>
+                Bonus Action <span class="float-right">max. 1/turn</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
@@ -178,6 +184,7 @@
     <!-- Data -->
     <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_action.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_freeaction.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_bonusaction.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
