Added ability scores & skills

--- a/quickref.html
+++ b/quickref.html
@@ -138,6 +138,39 @@
             </div>
         </div>
 
+        <!-- Ability Scores/Skills Section -->
+        <div id="section-abilities" class="section-container">
+            <div class="section-title">
+                Ability Scores & Skills
+            </div>
+            <div class="section-content">
+                <div class="section-row section-subtitle text fontsize">
+                    Strength measures bodily power, athletic training, and the extent to which you can exert raw physical force.
+                </div>
+                <div class="section-row" id="abilities-str"></div>
+                <div class="section-row section-subtitle text fontsize">
+                    Dexterity measures agility, reflexes, and balance.
+                </div>
+                <div class="section-row" id="abilities-dex"></div>
+                <div class="section-row section-subtitle text fontsize">
+                    Constitution measures health, stamina, and vital force.
+                </div>
+                <div class="section-row" id="abilities-con"></div>
+                <div class="section-row section-subtitle text fontsize">
+                    Intelligence measures mental acuity, accuracy of recall, and the ability to reason.
+                </div>
+                <div class="section-row" id="abilities-int"></div>
+                <div class="section-row section-subtitle text fontsize">
+                    Wisdom reflects how attuned you are to the world around you and represents perceptiveness and intuition.
+                </div>
+                <div class="section-row" id="abilities-wis"></div>
+                <div class="section-row section-subtitle text fontsize">
+                    Charisma measures your ability to interact effectively with others. It includes such factors as confidence and eloquence, and it can represent a charming or commanding personality.
+                </div>
+                <div class="section-row" id="abilities-cha"></div>
+            </div>
+        </div>
+
         <!-- XP Level Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
@@ -191,6 +224,7 @@
     <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
