Travel section + other stuff
Added a section on travel (specifically for distances longer than something you'd do in combat).

Added dropping concentration to free actions.

Added tremorsense to environmental effects.

Added falling damage to damage types. (Even though it's just bludgeoning, the calculation is nice to have).

--- a/quickref.html
+++ b/quickref.html
@@ -46,6 +46,9 @@
                  Free Action (At DM discretion)
              </div>
              <div class="section-content">
+                  <div class="section-row section-subtitle text fontsize">
+                      Free actions can be done on your turn at no cost.
+                  </div>
                  <div class="section-row" id="basic-free-actions"></div>
             </div>
         </div>
@@ -113,6 +116,20 @@
                     Obstacles can provide cover during combat, making a target more difficult to harm.
                 </div>
                 <div class="section-row" id="environment-cover"></div>
+            </div>
+        </div>
+
+        <!-- Travel Section -->
+        <div id="section-travel" class="section-container">
+             <div class="section-title">
+                 Traveling
+             </div>
+
+             <div class="section-content">
+                  <div class="section-row section-subtitle text fontsize">
+                      Movement over long distance and duration
+                  </div>
+                 <div class="section-row" id="travel"></div>
             </div>
         </div>
 
@@ -225,6 +242,7 @@
     <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
+         <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
