Added languages section
Covers languages from the PHB

--- a/quickref.html
+++ b/quickref.html
@@ -188,6 +188,23 @@
             </div>
         </div>
 
+        <!-- Languages section -->
+        <div id="section-languages" class="section-container">
+             <div class="section-title">
+                 Languages
+             </div>
+             <div class="section-content">
+                  <div class="section-row section-subtitle text fontsize">
+                     Standard Languages
+                 </div>
+                 <div class="section-row" id="languages-standard"></div>
+                 <div class="section-row section-subtitle text fontsize">
+                    Exotic Languages
+               </div>
+               <div class="section-row" id="languages-exotic"></div>
+            </div>
+        </div>
+
         <!-- XP Level Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
@@ -242,7 +259,8 @@
     <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
-         <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_languages.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
