Added equipment section
Covers equipment packages and tools, as well as weapon properties.

May expand this section later and add armor/weapons. But it's unlikely.

--- a/quickref.html
+++ b/quickref.html
@@ -205,6 +205,37 @@
             </div>
         </div>
 
+        <!-- Equipment section -->
+        <div id="section-equipment" class="section-container">
+             <div class="section-title">
+                 Equipment
+             </div>
+             <div class="section-content">
+               <div class="section-title-reverse-sienna">
+                   Equipment Packs
+               </div>
+               <div class="section-row" id="equipment-packs"></div>
+               <div class="section-title-reverse-sienna">
+                   Tools
+               </div>
+               <div class="section-row section-subtitle text fontsize">
+                   Normal tools
+               </div>
+              <div class="section-row" id="equipment-tools-norm"></div>
+               <div class="section-row section-subtitle text fontsize">
+                   Artisan's tools
+               </div>
+               <div class="section-row" id="equipment-tools-artisan"></div>
+               <div class="section-title-reverse-sienna">
+                   Weapons
+               </div>
+               <div class="section-row section-subtitle text fontsize">
+                   Weapon properties
+               </div>
+               <div class="section-row" id="equipment-weap-prop"></div>
+             </div>
+        </div>
+
         <!-- XP Level Chart section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
@@ -261,6 +292,7 @@
     <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_languages.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_equipment.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
