Added Class Abilities Section & more
Added a section covering non-passive class abilities (that have cost in the action economy).
These don't cover archetypes, and they may never, as it would take far too much time to add it all.

Also changed the Travel Pace section to have a proper table!

--- a/quickref.html
+++ b/quickref.html
@@ -161,26 +161,44 @@
                 Ability Scores & Skills
             </div>
             <div class="section-content">
+                <div class="section-title-reverse-crimson">
+                    Strength
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Strength measures bodily power, athletic training, and the extent to which you can exert raw physical force.
                 </div>
                 <div class="section-row" id="abilities-str"></div>
+                <div class="section-title-reverse-crimson">
+                    Dexterity
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Dexterity measures agility, reflexes, and balance.
                 </div>
                 <div class="section-row" id="abilities-dex"></div>
+                <div class="section-title-reverse-crimson">
+                    Constitution
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Constitution measures health, stamina, and vital force.
                 </div>
                 <div class="section-row" id="abilities-con"></div>
+                <div class="section-title-reverse-crimson">
+                    Intelligence
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Intelligence measures mental acuity, accuracy of recall, and the ability to reason.
                 </div>
                 <div class="section-row" id="abilities-int"></div>
+                <div class="section-title-reverse-crimson">
+                    Wisdom
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Wisdom reflects how attuned you are to the world around you and represents perceptiveness and intuition.
                 </div>
                 <div class="section-row" id="abilities-wis"></div>
+                <div class="section-title-reverse-crimson">
+                    Charisma
+                </div>
                 <div class="section-row section-subtitle text fontsize">
                     Charisma measures your ability to interact effectively with others. It includes such factors as confidence and eloquence, and it can represent a charming or commanding personality.
                 </div>
@@ -194,14 +212,71 @@
                  Languages
              </div>
              <div class="section-content">
-                  <div class="section-row section-subtitle text fontsize">
+                  <div class="section-title-reverse-purple">
                      Standard Languages
                  </div>
                  <div class="section-row" id="languages-standard"></div>
-                 <div class="section-row section-subtitle text fontsize">
+                 <div class="section-title-reverse-purple">
                     Exotic Languages
                </div>
                <div class="section-row" id="languages-exotic"></div>
+            </div>
+        </div>
+
+        <!-- Class Abilities section -->
+        <div id="section-classabilities" class="section-container">
+             <div class="section-title">
+                 Class Abilities
+             </div>
+             <div class="section-content">
+                  <div class="section-title-reverse-maroon">
+                    Barbarian
+                  </div>
+                  <div class="section-row" id="class-abilities-barbarian"></div>
+                  <div class="section-title-reverse-maroon">
+                    Bard
+                  </div>
+                  <div class="section-row" id="class-abilities-bard"></div>
+                  <div class="section-title-reverse-maroon">
+                    Cleric
+                  </div>
+                  <div class="section-row" id="class-abilities-cleric"></div>
+                  <div class="section-title-reverse-maroon">
+                    Druid
+                  </div>
+                  <div class="section-row" id="class-abilities-druid"></div>
+                  <div class="section-title-reverse-maroon">
+                    Fighter
+                  </div>
+                  <div class="section-row" id="class-abilities-fighter"></div>
+                  <div class="section-title-reverse-maroon">
+                    Monk
+                  </div>
+                  <div class="section-row" id="class-abilities-monk"></div>
+                  <div class="section-title-reverse-maroon">
+                    Paladin
+                  </div>
+                  <div class="section-row" id="class-abilities-paladin"></div>
+                  <div class="section-title-reverse-maroon">
+                    Ranger
+                  </div>
+                  <div class="section-row" id="class-abilities-ranger"></div>
+                  <div class="section-title-reverse-maroon">
+                    Rogue
+                  </div>
+                  <div class="section-row" id="class-abilities-rogue"></div>
+                  <div class="section-title-reverse-maroon">
+                    Sorcerer
+                  </div>
+                  <div class="section-row" id="class-abilities-sorcerer"></div>
+                  <div class="section-title-reverse-maroon">
+                    Warlock
+                  </div>
+                  <div class="section-row" id="class-abilities-warlock"></div>
+                  <!-- <div class="section-title-reverse-maroon">
+                    Wizard
+                  </div>
+                  <div class="section-row" id="class-abilities-wizard"></div> -->
             </div>
         </div>
 
@@ -293,6 +368,7 @@
     <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_languages.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_equipment.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_classabilities.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
