--- a/preview/quickref.html
+++ b/preview/quickref.html
@@ -280,6 +280,44 @@
             </div>
         </div>
 
+        <!--Spellcasting section-->
+        <div id="section-spellcasting" class="section-container">
+             <div class="section-title">
+                  Spellcasting
+             </div>
+             <div class="section-content">
+                  <div class="section-title-reverse-spellcasting">
+                       Spell Information
+                  </div>
+                  <div class="section-row" id="spellcasting-spellinfo"></div>
+                  <div class="section-title-reverse-spellcasting">
+                       Casting a Spell
+                  </div>
+                  <div class="section-row" id="spellcasting-casting"></div>
+             </div>
+        </div>
+
+        <!--Multiclassing section-->
+        <div id="section-multiclassing" class="section-container">
+             <div class="section-title">
+                  Multiclassing
+             </div>
+             <div class="section-content">
+                  <div class="section-title-reverse-multiclassing">
+                       Prerequisites, Proficiencies, and More
+                  </div>
+                  <div class="section-row" id="multiclassing-classreqs"></div>
+                  <div class="section-title-reverse-multiclassing">
+                       Class Features & Multiclassing
+                  </div>
+                  <div class="section-row" id="multiclassing-classfeats-reg"></div>
+                  <div class="section-row section-subtitle text fontsize">
+                       Spellcasting also acts different with multiple classes...
+                  </div>
+                  <div class="section-row" id="multiclassing-classfeats-casting"></div>
+             </div>
+        </div>
+
         <!-- Equipment section -->
         <div id="section-equipment" class="section-container">
              <div class="section-title">
@@ -369,6 +407,8 @@
     <Script type="text/javascript" src="js/data_languages.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_equipment.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_classabilities.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_spellcasting.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_multiclassing.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
 </body>
 </html>
