Reorganized the XP sections to be more neat

--- a/quickref.html
+++ b/quickref.html
@@ -349,23 +349,13 @@
              </div>
         </div>
 
-        <!-- XP Level Chart section -->
+        <!-- XP section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
-                 Experience Needed
+                 Experience
              </div>
              <div class="section-content">
-                 <div class="section-row" id="xp-player"></div>
-            </div>
-        </div>
-
-        <!-- XP-CR Chart section -->
-        <div id="section-xp-cr" class="section-container">
-             <div class="section-title">
-                 Experience Given
-             </div>
-             <div class="section-content">
-                 <div class="section-row" id="xp-cr"></div>
+                 <div class="section-row" id="xp"></div>
             </div>
         </div>
 
@@ -400,7 +390,7 @@
     <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
-    <Script type="text/javascript" src="js/data_xpchart.js" charset="utf-8"></script>
+    <Script type="text/javascript" src="js/data_xp.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
     <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
